--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,11 @@
               required
             />
           </label>
-          <button type="submit">Search</button>
+          <button class="btn" type="submit">Search</button>
         </form>
-        <span class="loader hidden"> </span>
         <ul class="gallery"></ul>
+        <button class="load-more hidden btn" type="button">Load More...</button>
+        <span class="loader hidden"> </span>
       </div>
     </section>
     <script type="module" src="./main.js"></script>
