--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,21 @@
     <section>
       <div class="container">
         <form class="form">
-          <label>
-            <input
-              type="text"
-              name="search-text"
-              placeholder="Search images..."
-              required
-            />
-          </label>
-          <button class="btn" type="submit">Search</button>
+          <div class="form-wrapper">
+            <label>
+              <input
+                type="text"
+                name="search-text"
+                placeholder="Search images..."
+                required
+              />
+            </label>
+            <button class="btn" type="submit">Search</button>
+          </div>
+          <span class="loader hidden"> </span>
         </form>
         <ul class="gallery"></ul>
         <button class="load-more hidden btn" type="button">Load More...</button>
-        <span class="loader hidden"> </span>
       </div>
     </section>
     <script type="module" src="./main.js"></script>
