update_load_more_btn

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
           <span class="loader hidden"> </span>
         </form>
         <ul class="gallery"></ul>
-        <button class="load-more hidden btn" type="button">Load More...</button>
+        <button class="load-more hidden btn" type="button">Load More</button>
       </div>
     </section>
     <script type="module" src="./main.js"></script>
